--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-social-login-buttons": "^3.0.0",
     "react-typed": "^1.2.0",
+    "reactstrap": "^8.4.1",
     "styled-components": "^5.1.0"
   },
   "scripts": {
